ipc/ipdl/test/ipdl/error/conflictProtocolMsg.ipdl
//error: ctor for protocol `conflictProtocolMsg', which is not managed by protocol `conflictProtocolMsg'

[ChildProc=any]
protocol conflictProtocolMsg {

    // it's an error to re-use the protocol name as a message ID; these
    // are reserved
child: async conflictProtocolMsg();

};
